# result

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  result.md
src/result/: __init__.py  result.py
tests/: test_result.py
