[project]
name = "result"
dynamic = ["version"]
description = "A Rust-like result type for Python"
readme = "README.md"
keywords = ["rust", "result", "enum"]
authors = [{ name = "Danilo Bargen", email = "mail@dbrgn.ch" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/rustedpy/result"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/result/__init__.py"

[tool.mypy]
python_version = "3.13"
files = ["src"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
addopts = ["--tb=short"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "lazydocs>=0.4.8",
  "mypy>=1.14.1",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.1",
  "pytest-mypy-plugins>=3.2.0",
  "ruff>=0.8.6",
]
